"Fixed body overflow issue and added mappy-bpts"
"Header and hero were scrolling sideways, found a weird breakpt
on the body and removed it. Added Mappy Breakpoints mixin."

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -12,11 +12,7 @@ body {
   color: $text-dark;
   
 }
-@media screen and (max-width: 480px) {
-  body, html {
-    min-width: 380px;
-  }
-}
+
 
 img {
   height: auto;
